# rules_rust

./: WORKSPACE.bazel
cxx/: BUILD.bazel  cxx.bzl  repositories.bzl
cxx/raze/: BUILD.bazel  Cargo.toml  crates.bzl
cxx/raze/remote/: BUILD.autocfg-1.0.1.bazel  BUILD.bitflags-1.3.2.bazel  BUILD.cc-1.0.72.bazel  BUILD.clap-3.0.10.bazel  BUILD.codespan-reporting-0.11.1.bazel  BUILD.cxx-1.0.63.bazel  BUILD.cxxbridge-cmd-1.0.63.bazel  BUILD.cxxbridge-flags-1.0.63.bazel  BUILD.cxxbridge-macro-1.0.63.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.indexmap-1.8.0.bazel  BUILD.link-cplusplus-1.0.6.bazel  BUILD.memchr-2.4.1.bazel  BUILD.os_str_bytes-6.0.0.bazel  BUILD.proc-macro2-1.0.36.bazel  BUILD.quote-1.0.15.bazel  BUILD.strsim-0.10.0.bazel  BUILD.syn-1.0.86.bazel  BUILD.termcolor-1.1.2.bazel  BUILD.textwrap-0.14.2.bazel  BUILD.unicode-width-0.1.9.bazel  BUILD.unicode-xid-0.2.2.bazel  BUILD.winapi-0.3.9.bazel  BUILD.winapi-i686-pc-windows-gnu-0.4.0.bazel  BUILD.winapi-util-0.1.5.bazel  BUILD.winapi-x86_64-pc-windows-gnu-0.4.0.bazel
examples/cxx/: BUILD.bazel  main.rs
